# c-lessons

./: .gitignore
1_basic_c/4_loops/: main.c
2_advanced_c/00_sizeof/: main.c
2_advanced_c/02_strings/: main.c
2_advanced_c/04_dynamic_memory_allocation/: main.c
2_advanced_c/05_building/: main.c  module.h  moudle.c
3_c++_basic/0_hello_world/: main.cpp
3_c++_basic/1_input_output/: 0_basic.cpp  1_readline.cpp  2_streams.cpp
3_c++_basic/2_scopes/: 0_scopes.cpp  1_namespaces.cpp  2_using.cpp
3_c++_basic/3_conditions_and_loops/: 0_conditions.cpp  1_siwtch.cpp  2_loops.cpp  3_range_loops.cpp
3_c++_basic/4_strings_and_vectors/: 0_vectors.cpp  1_size_and_cap.cpp  2_strings.cpp
4_overloading_and_templates/: 01_refs.cpp  02_func_refs.cpp  03_const.cpp  04_auto.cpp  05_overloading.cpp  06_01_templates.cpp  06_02_templates.cpp
5_oop_basic/: 01_struct.cpp
5_oop_basic/02_class/: Time.cpp  Time.h  main.cpp
5_oop_basic/03_inheritance_and_compose/: 01_inheritance.cpp  02_compose.cpp  03_animal_inheritance.cpp
6_cmake/: CMakeLists.txt  main.cpp  other_main.cpp  qt.cpp  utils.cpp
6_cmake/headers/: utils.h
lesson1/0_output/: main.c
lesson1/1_vars/: main.c
lesson1/2_input/: main.c
lesson1/3_conditions/: main.c
lesson1/4_loops/: main.c
lesson_1/1_vars/: main.c
lesson_1/2_input/: main.c
lesson_1/3_conditions/: main.c
lesson_2/01_arrays/: main.c
lesson_2/02_strings/: main.c
lesson_2/03_structures/: main.c
lesson_2/04_dynamic_memory_allocation/: main.c  realloc.c
lesson_2/05_building/: main.c
